welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:10: error: Unmatched closing brace '}' ignored here
 }
 ^